<resources>
    <string name="VisiblePreviewAngle_Fmt_Value">%.1f</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_ai_off">AI off</string>
    <string name="accessibility_ai_on">AI on</string>
    <string name="accessibility_camera_id_to_back">Switch to back camera</string>
    <string name="accessibility_camera_id_to_front">Switch to front camera</string>
    <string name="accessibility_camera_version">camera version: %s</string>
    <string name="accessibility_capture_pano_start">Start panorama</string>
    <string name="accessibility_capture_pano_stop">Stop panorama</string>
    <string name="accessibility_close_mode">Close %s, return to normal mode</string>
    <string name="accessibility_filter_off">filter off</string>
    <string name="accessibility_filter_on">filter on</string>
    <string name="accessibility_flash_auto">flash auto</string>
    <string name="accessibility_flash_off">flash off</string>
    <string name="accessibility_flash_on">flash on</string>
    <string name="accessibility_flash_torch">flash torch</string>
    <string name="accessibility_gender_estimate_off">gender estimate off</string>
    <string name="accessibility_gender_estimate_on">gender estimate on</string>
    <string name="accessibility_hdr_auto">HDR auto</string>
    <string name="accessibility_hdr_off">HDR off</string>
    <string name="accessibility_hdr_on">HDR on</string>
    <string name="accessibility_motion_photo_off">Motion photo off</string>
    <string name="accessibility_motion_photo_on">Motion photo on</string>
    <string name="accessibility_picturesize_full_screen">Full Screen</string>
    <string name="accessibility_play_video">Play video</string>
    <string name="accessibility_settings_menu">More options</string>
    <string name="accessibility_super_macro_off">Super Macro off</string>
    <string name="accessibility_super_macro_on">Super Macro on</string>
    <string name="accessibility_switch_mode">Switch to %s mode</string>
    <string name="accessibility_switch_to_hdf_blur">Blur</string>
    <string name="accessibility_switch_to_normal_angle">Switch to normal angle lens</string>
    <string name="accessibility_switch_to_qr_code">QrCode</string>
    <string name="accessibility_switch_to_video">Video</string>
    <string name="accessibility_switch_to_wide_angle">Switch to wide angle lens</string>
    <string name="accessibility_take_photo">Take photo</string>
    <string name="accessibility_thumbnail">Photo gallery</string>
    <string name="accessibility_video_pause">Pause recording</string>
    <string name="accessibility_video_resume">Resume recording</string>
    <string name="accessibility_video_stabilization_off">Video stabilization off</string>
    <string name="accessibility_video_stabilization_on">Video stabilization on</string>
    <string name="accessibility_video_start">Start video</string>
    <string name="accessibility_video_stop">Stop video</string>
    <string name="accessibility_zoom">Swipe up and down to zoom</string>
    <string name="adjust_progress">+%s</string>
    <string name="ai_scene_tips_foliage">Plant</string>
    <string name="ai_scene_tips_food">Food</string>
    <string name="ai_scene_tips_portrait">Portrait</string>
    <string name="ai_scene_tips_sky">Blue sky</string>
    <string name="ai_scene_tips_text">Text</string>
    <string name="ai_type_description">Adapt the proper parameters automatically to photo using AI scene detection</string>
    <string name="ai_type_name">AI</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asd_result_hdr">HDR activated</string>
    <string name="beauty_guide_top_text">AI Beauty</string>
    <string name="beauty_guide_top_text_description">Turn on the AI beauty function and adjust the parameters according to your face</string>
    <string name="bokeh_offfline_processing">Offline bokeh data processing……</string>
    <string name="bokeh_type_description">This function allows you editing the photo using the Artistic Blur effect.</string>
    <string name="bokeh_type_name">Artistic blur</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera_review_done_desc">Done</string>
    <string name="cancel_text">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="confirm_mode_tip">Tap to switch to %1$s mode</string>
    <string name="confirm_restore_message">Do you want to restore camera default settings?</string>
    <string name="default_web_client_id">788593580818-0m9p521jslgugba3ehivukl1rf1urj2b.apps.googleusercontent.com</string>
    <string name="don_t_cover_the_lens">"Don't cover the lens"</string>
    <string name="effect_setting_facebeauty">Face Beauty</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > %1$s > Permissions</string>
    <string name="enable_sd_permission_content">View your settings and allow access to \"DCIM\" in \"SD card\"</string>
    <string name="enable_sd_permission_title">Camera needs SD card access</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="face_beauty_custom_eyes_info">Eyes</string>
    <string name="face_beauty_custom_rosy_info">Rosy</string>
    <string name="face_beauty_custom_skin_info">Skin</string>
    <string name="face_beauty_custom_thin_info">Thin</string>
    <string name="face_beauty_custom_whitening_info">Whitening</string>
    <string name="faceplus_asd_tips_bankcard">Credit card</string>
    <string name="faceplus_asd_tips_bluesky">Sky</string>
    <string name="faceplus_asd_tips_businesscard">Name card</string>
    <string name="faceplus_asd_tips_cat">Cat</string>
    <string name="faceplus_asd_tips_dog">Dog</string>
    <string name="manual_focus_title">M focus</string>
    <string name="pref_camera_ai_title">AI</string>
    <string name="pref_camera_antibanding_title">Anti-flicker</string>
    <string name="pref_camera_face_detect_default">on</string>
    <string name="pref_camera_face_detect_title">Face detection</string>
    <string name="pref_camera_filter_title">Filter</string>
    <string name="pref_camera_flashmode_default">off</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_gpu_effect_default">0</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_id_title">Switch camera</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_module_title">Camera mode</string>
    <string name="pref_camera_picture_aspect_ratio_title">Picture aspect ratio</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_raw_file_title">RAW file</string>
    <string name="pref_camera_record_location_title">Geo tagging</string>
    <string name="pref_camera_recordaudio_title">Video mute</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_save_pos_title">Storage</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_screenflash_default">off</string>
    <string name="pref_camera_selftimer_default">0</string>
    <string name="pref_camera_selftimer_title">Self timer</string>
    <string name="pref_camera_shutter_sound_title">Shutter sound</string>
    <string name="pref_camera_sticker_title">Sticker</string>
    <string name="pref_camera_volume_key_title">Volume keys</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">AWB</string>
    <string name="pref_camera_zsd_title">ZSD</string>
    <string name="pref_capture_mirror_title">Front mirror</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_exposure_title">EV</string>
    <string name="pref_gender_estimate_title">Gender estimate</string>
    <string name="pref_google_lens">Google Lens</string>
    <string name="pref_hdr_default">auto</string>
    <string name="pref_hdr_title">HDR</string>
    <string name="pref_motion_photo_default">off</string>
    <string name="pref_motion_photo_title">motion</string>
    <string name="pref_pic_struct_default">off</string>
    <string name="pref_pic_struct_title">Framing lines</string>
    <string name="pref_restore_default">on</string>
    <string name="pref_restore_detail">Restore defaults</string>
    <string name="pref_screenflash_title">Display flash</string>
    <string name="pref_shutter_smile_default">off</string>
    <string name="pref_shutter_smile_title">Smile shot</string>
    <string name="pref_shutter_speed_title">Shutter speed</string>
    <string name="pref_shutter_touch_title">Touch shot</string>
    <string name="pref_shutter_watermark_default">on</string>
    <string name="pref_shutter_watermark_title">Water mark</string>
    <string name="pref_shutterspeed_default">0</string>
    <string name="pref_video_3dnr_title">Video 3DNR</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_stabilization_title">Video stabilization</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time interval</string>
    <string name="radio_switch_to_super_macro">Super macro</string>
    <string name="shutcauts_backcamera">Take a photo</string>
    <string name="shutcauts_backvideo">Rec. a video</string>
    <string name="shutcauts_frontcamera">Take a selfie</string>
    <string name="shutcauts_frontvideo">Rec. a video (selfie)</string>
</resources>