<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup xmlns:camera="http://schemas.android.com/apk/res-auto">
    <IconListPreference camera:defaultValue="1280x720" camera:entries="@array/pref_camera_picturesize_entries" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:generalgroup="local" camera:icons="@array/ic_picture_size_icons" camera:key="pref_camera_picturesize_key" camera:title="@string/pref_camera_picturesize_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="4:3" camera:entries="@array/pref_camera_picture_aspect_ratio_entries" camera:entryValues="@array/pref_camera_aspect_ratio_entryvalues" camera:generalgroup="local" camera:icons="@array/ic_picture_aspect_ratio_icons" camera:key="pref_camera_picture_aspect_ratio_key" camera:logicalgroup="photoparams" camera:title="@string/pref_camera_picture_aspect_ratio_title" />
    <IconListPreference camera:defaultValue="5" camera:entries="@array/pref_video_quality_entries" camera:entryValues="@array/pref_video_quality_entryvalues" camera:generalgroup="local" camera:icons="@array/video_quality_icons" camera:key="pref_video_quality_key" camera:logicalgroup="videoparams" camera:title="@string/pref_video_quality_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_flashmode_default" camera:entries="@array/pref_camera_flashmode_entries" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:generalgroup="local" camera:icons="@array/camera_flashmode_icons" camera:key="pref_camera_flashmode_key" camera:logicalgroup="commonparams" camera:title="@string/pref_camera_flashmode_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_screenflash_default" camera:entries="@array/pref_camera_screenflash_entries" camera:entryValues="@array/pref_camera_screenflash_entryvalues" camera:generalgroup="local" camera:icons="@array/camera_screenflash_icons" camera:key="pref_camera_screenflash_key" camera:logicalgroup="photoparams" camera:title="@string/pref_screenflash_title" />
    <IconListPreference camera:defaultValue="@string/pref_hdr_default" camera:entries="@array/pref_hdr_entries" camera:entryValues="@array/pref_hdr_entryvalues" camera:generalgroup="local" camera:icons="@array/pref_hdr_icons" camera:key="pref_hdr_key" camera:logicalgroup="commonparams" camera:title="@string/pref_hdr_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_gpu_effect_default" camera:entries="@array/pref_camera_gpu_effect_entries" camera:entryValues="@array/pref_camera_gpu_effect_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_filter_icons" camera:key="pref_filter_key" camera:logicalgroup="commonlogical" camera:title="@string/pref_camera_filter_title" />
    <IconListPreference camera:defaultValue="off" camera:entries="@array/pref_camera_asd_entries" camera:entryValues="@array/pref_camera_asd_entryvalues" camera:generalgroup="local" camera:icons="@array/pref_camera_ai_icons" camera:key="pref_camera_asd_key" camera:logicalgroup="photological" camera:title="@string/pref_camera_ai_title" camera:uigroup="local" />
    <IconListPreference camera:defaultValue="off" camera:entries="@array/pref_camera_pic_frame_entries" camera:entryValues="@array/pref_camera_pic_frame_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_shutter_touch_icons" camera:key="pref_shutter_touch_key" camera:logicalgroup="photological" camera:title="@string/pref_shutter_touch_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:entryValues="@array/camera_id_entryvalues" camera:generalgroup="global" camera:icons="@array/camera_id_icons" camera:key="pref_camera_id_key" camera:title="@string/pref_camera_id_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_scenemode_default" camera:entries="@array/pref_camera_scenemode_entries" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:generalgroup="local" camera:icons="@array/camera_scenemode_icons" camera:key="pref_camera_scenemode_key" camera:logicalgroup="commonparams" camera:title="@string/pref_camera_scenemode_title" />
    <IconListPreference camera:defaultValue="@string/pref_shutter_smile_default" camera:entries="@array/pref_camera_pic_frame_entries" camera:entryValues="@array/pref_camera_pic_frame_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_shutter_smile_icons" camera:key="pref_shutter_smile_key" camera:logicalgroup="photological" camera:title="@string/pref_shutter_smile_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="@string/pref_shutter_watermark_default" camera:entries="@array/pref_camera_watermark_entries" camera:entryValues="@array/pref_camera_watermark_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_water_mark_icons" camera:key="pref_shutter_watermark_key" camera:logicalgroup="photological" camera:title="@string/pref_shutter_watermark_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="@string/pref_camera_selftimer_default" camera:entries="@array/pref_camera_selftimer_entries" camera:entryValues="@array/pref_camera_selftimer_entryvalues" camera:generalgroup="global" camera:icons="@array/camera_selftimer_icons" camera:key="pref_camera_self_timer_key" camera:logicalgroup="photological" camera:title="@string/pref_camera_selftimer_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="off" camera:entries="@array/pref_camera_super_macro_entries" camera:entryValues="@array/pref_camera_super_macro_entries" camera:generalgroup="global" camera:icons="@array/pref_camera_super_macro_icons" camera:key="pref_super_macro_key" camera:logicalgroup="photological" camera:title="@string/radio_switch_to_super_macro" />
    <IconListPreference camera:defaultValue="off" camera:entries="@array/pref_camera_shutter_sound_entries" camera:entryValues="@array/pref_camera_shutter_sound_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_shutter_sound_icons" camera:key="pref_shutter_sound_key" camera:logicalgroup="commonlogical" camera:title="@string/pref_camera_shutter_sound_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="off" camera:entries="@array/pref_camera_raw_file_entries" camera:entryValues="@array/pref_camera_raw_file_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_raw_file_icons" camera:key="pref_raw_file_key" camera:logicalgroup="photological" camera:title="@string/pref_camera_raw_file_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="on" camera:entries="@array/pref_camera_recordlocation_entries" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_recordlocation_icons" camera:key="pref_camera_recordlocation_key" camera:logicalgroup="commonlogical" camera:title="@string/pref_camera_record_location_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="on" camera:entries="@array/pref_capture_mirror_entries" camera:entryValues="@array/pref_capture_mirror_entryvalues" camera:generalgroup="local" camera:icons="@array/pref_capture_mirror_icons" camera:key="pref_capture_mirror_key" camera:logicalgroup="commonlogical" camera:title="@string/pref_capture_mirror_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="@string/pref_pic_struct_default" camera:entries="@array/pref_pic_struct_entries" camera:entryValues="@array/pref_pic_struct_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_pic_struct_icons" camera:key="pref_pic_struct_key" camera:logicalgroup="photological" camera:title="@string/pref_pic_struct_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="on" camera:entries="@array/pref_video_stabilization_entries" camera:entryValues="@array/pref_video_stabilization_entryvalues" camera:generalgroup="local" camera:icons="@array/video_stabilization_icons" camera:key="pref_video_stabilization_key" camera:logicalgroup="videoparams" camera:title="@string/pref_video_stabilization_title" />
    <IconListPreference camera:defaultValue="off" camera:entries="@array/pref_video_3dnr_entries" camera:entryValues="@array/pref_video_3dnr_entryvalues" camera:generalgroup="local" camera:icons="@array/video_3dnr_icons" camera:key="pref_video_3dnr_key" camera:logicalgroup="videoparams" camera:title="@string/pref_video_3dnr_title" />
    <IconListPreference camera:defaultValue="167" camera:entries="@array/pref_video_time_lapse_frame_interval_entries" camera:entryValues="@array/pref_video_time_lapse_frame_interval_entryvalues" camera:generalgroup="local" camera:icons="@array/video_timelapse_icons" camera:key="pref_video_time_lapse_frame_interval_key" camera:logicalgroup="videoparams" camera:title="@string/pref_video_time_lapse_frame_interval_title" />
    <IconListPreference camera:defaultValue="shoot" camera:entries="@array/pref_camera_volume_key_entries" camera:entryValues="@array/pref_camera_volume_key_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_volume_icons" camera:key="pref_camera_volume_key" camera:logicalgroup="photological" camera:title="@string/pref_camera_volume_key_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="on" camera:entries="@array/pref_camera_zsd_entries" camera:entryValues="@array/pref_camera_zsd_entryvalues" camera:generalgroup="local" camera:icons="@array/pref_camera_zsd_icons" camera:key="pref_camera_zsd_key" camera:logicalgroup="commonparams" camera:title="@string/pref_camera_zsd_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="off" camera:entries="@array/pref_camera_recordaudio_entries" camera:entryValues="@array/pref_camera_recordaudio_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_recordaudio_icons" camera:key="pref_camera_videomute_key" camera:logicalgroup="videological" camera:title="@string/pref_camera_recordaudio_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="auto" camera:entries="@array/pref_camera_antibanding_entries" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_antibanding_icons" camera:key="pref_camera_antibanding_key" camera:logicalgroup="commonparams" camera:title="@string/pref_camera_antibanding_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="@string/pref_restore_default" camera:entries="@array/pref_camera_pic_frame_entries" camera:entryValues="@array/pref_camera_pic_frame_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_restore_default_icons" camera:key="pref_restore_default_key" camera:title="@string/pref_restore_detail" camera:uigroup="setting" />
    <ListPreference camera:entries="@array/pref_camera_saturation_entries" camera:entryValues="@array/pref_camera_saturation_entryvalues" camera:generalgroup="local" camera:icon="@drawable/saturation" camera:key="pref_camera_saturation_key" camera:logicalgroup="commonparams" camera:title="@string/pref_camera_saturation_title" />
    <IconListPreference camera:defaultValue="@string/pref_shutterspeed_default" camera:entries="@array/pref_camera_shutterspeed_entries" camera:entryValues="@array/pref_camera_shutterspeed_entryvalues" camera:generalgroup="local" camera:icon="@drawable/shutter" camera:key="pref_camera_shutterspeed_key" camera:logicalgroup="commonparams" camera:title="@string/pref_shutter_speed_title" />
    <IconListPreference camera:defaultValue="@string/pref_exposure_default" camera:entries="@array/pref_camera_exposure_entries" camera:entryValues="@array/pref_camera_exposure_entryvalues" camera:generalgroup="local" camera:icon="@drawable/ev" camera:key="pref_camera_exposure_key" camera:logicalgroup="commonparams" camera:title="@string/pref_exposure_title" />
    <ListPreference camera:defaultValue="@string/pref_camera_iso_default" camera:entries="@array/pref_camera_iso_entries" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:generalgroup="local" camera:icon="@drawable/iso" camera:key="pref_camera_iso_key" camera:logicalgroup="commonparams" camera:title="@string/pref_camera_iso_title" />
    <IconListPreference camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:generalgroup="local" camera:icon="@drawable/wb" camera:icons="@array/whitebalance_icons" camera:key="pref_camera_whitebalance_key" camera:logicalgroup="commonparams" camera:title="@string/pref_camera_whitebalance_title" />
    <ProgressPreference camera:defaultValue="0" camera:generalgroup="local" camera:icon="@drawable/mfocus" camera:key="pref_manual_focus_key" camera:logicalgroup="commonparams" camera:title="@string/manual_focus_title" />
    <ListPreference camera:defaultValue="@string/pref_camera_face_detect_default" camera:entries="@array/pref_camera_face_detect_entries" camera:entryValues="@array/pref_camera_face_detect_entryvalues" camera:generalgroup="local" camera:key="pref_face_detect_key" camera:logicalgroup="photological" camera:title="@string/pref_camera_face_detect_title" />
    <CameraModePreference camera:bottomIcons="@array/pref_camera_module_icons" camera:defaultValue="normal" camera:entries="@array/pref_camera_module_entries" camera:entryValues="@array/pref_camera_module_entryvalues" camera:generalgroup="global" camera:key="pref_camera_module_key" camera:title="@string/pref_camera_module_title" camera:topIcons="@array/pref_camera_top_module_icons" />
    <ListPreference camera:defaultValue="off" camera:entryValues="@array/pref_video_beauty_entryvalues" camera:generalgroup="global" camera:key="pref_video_beauty_key" camera:logicalgroup="videological" />
    <IconListPreference camera:defaultValue="@string/pref_motion_photo_default" camera:entries="@array/pref_motion_photo_entries" camera:entryValues="@array/pref_motion_photo_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_motion_photo_icons" camera:key="pref_motion_photo_key" camera:logicalgroup="photological" camera:title="@string/pref_motion_photo_title" />
    <ProgressPreference camera:generalgroup="global" camera:key="pref_sticker_key" camera:logicalgroup="photological" camera:title="@string/pref_camera_sticker_title" />
    <IconListPreference camera:defaultValue="on" camera:entries="@array/pref_gender_estimate_entries" camera:entryValues="@array/pref_gender_estimate_entryvalues" camera:generalgroup="global" camera:icons="@array/gender_estimate_icons" camera:key="pref_gender_estimate_key" camera:logicalgroup="photological" camera:title="@string/pref_gender_estimate_title" />
    <IconListPreference camera:defaultValue="phone" camera:entries="@array/pref_camera_save_pos_entries" camera:entryValues="@array/pref_camera_save_pos_entryvalues" camera:generalgroup="global" camera:icons="@array/pref_camera_save_pos_icons" camera:key="pref_save_pos_key" camera:logicalgroup="photological" camera:title="@string/pref_camera_save_pos_title" camera:uigroup="setting" />
    <IconListPreference camera:defaultValue="on" camera:entries="@array/pref_camera_pic_frame_entries" camera:entryValues="@array/pref_camera_pic_frame_entryvalues" camera:generalgroup="local" camera:icons="@array/pref_google_lens_icons" camera:key="pref_google_lens_key" camera:logicalgroup="photological" camera:title="@string/pref_google_lens" />
</PreferenceGroup>