<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/camera_bottom_ui" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_fragment_height" app:layout_constraintBottom_toBottomOf="parent" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/background" android:background="@color/bottom_mode_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.hodafone.camera.ui.commonui.ShutterButton android:id="@id/photo_shutter_button_photo" android:layout_width="@dimen/photo_shutter_button_size" android:layout_height="@dimen/photo_shutter_button_size" android:src="@drawable/btn_photo" android:contentDescription="@string/accessibility_take_photo" app:layout_constraintBottom_toBottomOf="@id/bottom_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ViewStub android:id="@id/video_start_btn_view_stub" android:layout="@layout/video_start_btn_layout" android:layout_width="@dimen/video_shutter_button_size" android:layout_height="@dimen/video_shutter_button_size" android:contentDescription="@string/accessibility_video_start" app:layout_constraintBottom_toBottomOf="@id/bottom_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ViewStub android:id="@id/video_capture_btn_view_stub" android:layout="@layout/video_capture_btn_layout" android:layout_width="@dimen/video_capture_button_size" android:layout_height="@dimen/video_capture_button_size" android:contentDescription="@string/accessibility_take_photo" android:layout_marginEnd="56.0dip" app:layout_constraintBottom_toBottomOf="@id/bottom_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.hodafone.camera.ui.commonui.ShutterButton android:id="@id/switch_camera_facing" android:layout_width="@dimen/switch_camera_button_size" android:layout_height="@dimen/switch_camera_button_size" android:src="@drawable/btn_switch_camera_facing" android:contentDescription="@string/accessibility_camera_id_to_front" android:layout_marginEnd="56.0dip" app:layout_constraintBottom_toBottomOf="@id/bottom_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ViewStub android:id="@id/video_pause_btn_view_stub" android:layout="@layout/video_pause_btn_layout" android:layout_width="@dimen/video_pause_resume_button_size" android:layout_height="@dimen/video_pause_resume_button_size" android:contentDescription="@string/accessibility_video_pause" android:layout_marginStart="56.0dip" app:layout_constraintBottom_toBottomOf="@id/bottom_line" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.hodafone.camera.ui.commonui.RotateImageView android:id="@id/thumbnailimg" android:layout_width="@dimen/thumbnail_button_size" android:layout_height="@dimen/thumbnail_button_size" android:src="@drawable/btn_thumbnail" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_thumbnail" android:layout_marginStart="56.0dip" app:layout_constraintBottom_toBottomOf="@id/bottom_line" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ViewStub android:id="@id/btn_cancel_view_stub" android:layout="@layout/btn_cancel_layout" android:layout_width="@dimen/switch_camera_button_size" android:layout_height="@dimen/switch_camera_button_size" android:layout_marginStart="56.0dip" app:layout_constraintBottom_toBottomOf="@id/bottom_line" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/bottom_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/shutter_button_group_margin_bottom" />
</androidx.constraintlayout.widget.ConstraintLayout>